<resources>
    <string name="app_name">StamiNotif</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_set_up_app">Set Up App</string>
    <string name="tv_stamina_recharge_time">Stamina Recharge Time (minutes)</string>
    <string name="tv_max_stamina">Max Stamina</string>
    <string name="tv_current_stamina_value">Current Stamina Value</string>
    <string name="button_search">Search</string>
    <string name="iv_app_name" />
    <string name="button_addnew">Add</string>
    <string name="tv_appnamehome">StamiNotif</string>
    <string name="preferences_file" />
    <string name="name">Name Of App</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="decrement1">-1</string>
    <string name="decrement5">-5</string>
    <string name="decrement10">-10</string>
    <string name="appexamplename">appName</string>
    <string name="notif_name">StamiNotif</string>
    <string name="channel_name_perm">Favourite Notification</string>
    <string name="channel_description_perm">This notification stays around to update the users favourite tracker.</string>
    <string name="channel_name">Full Notification</string>
    <string name="channel_description">This notification pings when an app has full stamina.</string>
    <string name="notif_button_1">What value should the first notification button have?</string>
    <string name="notif_button_2">What value should the second notification button have?</string>
    <string name="button_apply">Apply</string>
    <string name="tv_search_tip">Search your apps name to find the icon.</string>
    <string name="share">Share</string>
</resources>